Update JDK requirement and add additional annotations usage
This update raises the JDK requirement from 11 to 21 in the README. It also expands the README to include examples of usage for additional annotations and their limitations. Beyond that, enum descriptions for different strategies of locating an element are added, and the Maven configuration is updated.